--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -53,7 +53,7 @@
       <ion-button class="delete_button" (click)="delete(result)">delete</ion-button>
       <br>
     </ion-item>
-    <ion-button id="sellButton"  (click)="onSubmit()" >sell</ion-button>
+    <ion-button id="sellButton"  (click)="sellItems()" >sell</ion-button>
     </form>
   </div>
 </ion-content>
